# Sentinel

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
sentinel_root/: .firebaserc  .gitignore  blind_test.py  dry_run_test.py  firebase.json
sentinel_root/core_engine/: CMakeLists.txt  Dockerfile  deploy.sh  xgboost.json  xgboost_model.json
sentinel_root/core_engine/include/: firestore_client.hpp  graph_sniper.hpp  sieve_xgboost.hpp
sentinel_root/core_engine/src/: firestore_client.cpp  graph_sniper.cpp  main.cpp  sieve_xgboost.cpp
sentinel_root/core_engine/tests/: mock_runner  mock_stream.cpp
sentinel_root/gemini_proxy/: Dockerfile  main.py  requirements.txt
sentinel_root/ml_pipeline/: test_report.txt  train_exporter.py  train_sieve_pipeline.py  train_synthetic_pipeline.py
sentinel_root/war_room_ui/: .flutter-plugins-dependencies  pubspec.yaml
sentinel_root/war_room_ui/.dart_tool/: package_config.json  package_graph.json
sentinel_root/war_room_ui/.dart_tool/flutter_build/2472bec66dad86291ba7491bb5f06ff3/: .filecache  app.dill.deps  dart2js.d  dart2js.stamp  dart2wasm.stamp  dart_build.d  dart_build.stamp  dart_build_result.json  flutter_assets.d  main.dart  (+10 more)
sentinel_root/war_room_ui/lib/: main.dart
sentinel_root/war_room_ui/lib/assets/: mock_telemetry.json
sentinel_root/war_room_ui/lib/services/: DemoSimulatorService.dart  firestore_service.dart  gemini_threat_reporter.dart
sentinel_root/war_room_ui/lib/state/: app_state.dart
sentinel_root/war_room_ui/lib/ui/: dashboard.dart  node_graph.dart  ring_detection_panel.dart  threat_feed.dart
